data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_492.wast
;; 3. **Mismatched Operand Stack Manipulation**: Create a scenario where a `br` instruction within a loop incorrectly unwinds the operand stack. This can result in the loop entering an invalid state or infinitely continuing because the operand stack isn't restored correctly.

(assert_invalid
  (module
    (func (block $label$0 (result i32)
      (loop $label$1 (result i32)
        (i32.const 10)
        (br $label$1)
        (i32.const 20)
      )
    ))
  )
  "type mismatch"
)